# c-logger

example/: CMakeLists.txt
src/: logger.c
